--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
     "react-to-print": "^3.1.1",
+    "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.1",
     "tsx": "^4.20.3",
     "zod": "^4.0.17",
