--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
     "react": "19.1.0",
     "react-dom": "19.1.0",
