--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "next": "15.4.6",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
+    "openapi-fetch": "^0.15.0",
+    "openapi-typescript-fetch": "^2.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
